# HelloBalls_ROS2

./: .gitignore
lib/: HelloBalls_CV.py
src/cv_publisher/: package.xml  setup.cfg  setup.py
src/cv_publisher/cv_publisher/: camera_publisher.py
src/cv_publisher/launch/: camera.launch.py
src/cv_subscriber/: package.xml  setup.cfg  setup.py
src/cv_subscriber/cv_subscriber/: cv_suvscriber.py
src/esp32_combined_node/: package.xml  setup.cfg  setup.py
src/esp32_combined_node/esp32_combined_node/: esp32_combined_node.py
src/esp32_combined_node/launch/: esp32_combined_node.launch.py
src/esp32_imu_node/: README.md  package.xml  setup.cfg  setup.py
src/esp32_imu_node/config/: esp_imu.yaml
src/esp32_imu_node/esp32_imu_node/: esp32_imu_node.py
src/esp32_imu_node/launch/: esp32_imu.launch.py  esp32_vio.launch.py
src/esp32_imu_node/test/: binary_format_simulator.py  json_format_simulator.py
src/esp32_motor_controller/: README.md  package.xml  setup.cfg  setup.py
src/esp32_motor_controller/config/: motor_params.yaml
src/esp32_motor_controller/esp32_motor_controller/: __init__.py  motor_controller_node.py
src/esp32_motor_controller/launch/: motor_controller.launch.py
src/esp32_motor_controller/test/: test_copyright.py  test_flake8.py  test_pep257.py
src/imu_debug/: package.xml  setup.cfg  setup.py
src/imu_debug/imu_debug/: imu_debug_node.py
src/yolo11_detector/: package.xml  setup.cfg  setup.py  setup_yolo.sh
src/yolo11_detector/launch/: yolo11_detector.launch.py  yolo_with_camera.launch.py
(+1 files in other folders)
