[metadata]
name = esp32_motor_controller
version = 0.1.0
description = A ROS 2 package for motor control on the RDK X5 mini PC, connecting to an ESP32 via UART.
author = Your Name
author_email = your.email@example.com
license = MIT
url = https://github.com/yourusername/esp32_motor_controller

[options]
packages = find:
install_requires =
    rclpy
    pyserial

[options.packages.find]
where = esp32_motor_controller

[tool:pytest]
addopts = -v
testpaths = test

[flake8]
max-line-length = 88
extend-ignore = E203, E266, E501
exclude = .git,__pycache__,docs/source/conf.py,old,build,dist

[coverage:run]
branch = True
source = esp32_motor_controller

[coverage:report]
show_missing = True
skip_covered = True

[develop]
script_dir=$base/lib/esp32_motor_controller
[install]
install_scripts=$base/lib/esp32_motor_controller